external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/wildcard_same_scope_allow_all_deny_specific.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/wildcard_same_scope_allow_all_deny_specific.move:5:13
  │
3 │ #[deny(unused_variable)]
  │        --------------- the lint level is defined here
4 │ module 0x42::m {
5 │     fun foo(a: u64) {
  │             ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'

error[E09002]: unused variable
  ┌─ tests/move_check/warning_suppression/wildcard_same_scope_allow_all_deny_specific.move:6:13
  │
3 │ #[deny(unused_variable)]
  │        --------------- the lint level is defined here
  ·
6 │         let x;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
